--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Препроцессоры</title>
 </head>
+
 <body>
     <div class="container">
         <h1 class="container__title">Знакомство с <span class="container__color">препроцессорами</span></h1>
+
+        <!-- Меню -->
+        <nav>
+            <div class="nav">
+                <a href="#" class="nav__link">link-1</a>
+                <a href="#" class="nav__link">link-2</a>
+                <a href="#" class="nav__link">link-3</a>
+                <a href="#" class="nav__link">link-4</a>
+            </div>
+        </nav>
+        <!-- // Меню -->
     </div>
 </body>
+
 </html>
