--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
             </div>
         </nav>
         <!-- // Меню -->
+
+        <!-- Контент -->
+        <div class="content">
+            <div class="content__item"></div>
+            <div class="content__item"></div>
+            <div class="content__item"></div>
+            <div class="content__item"></div>
+        </div>
+        <!-- //Контент -->
     </div>
 </body>
 
