4 задание миксины, наследование

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
         <!-- Контент -->
         <div class="content">
-            <div class="content__item"></div>
-            <div class="content__item"></div>
-            <div class="content__item"></div>
-            <div class="content__item"></div>
+            <div class="content__item">Lorem ipsum dolor sit amet.</div>
+            <div class="content__item">Lorem ipsum dolor sit amet.</div>
+            <div class="content__item">Lorem ipsum dolor sit amet.</div>
+            <div class="content__item">Lorem ipsum dolor sit amet.</div>
         </div>
         <!-- //Контент -->
     </div>
