обновление классов по БЭМ

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <img class="hero-img mobile-none" src="./img/main-photo.png" alt="Главное фото">
         <div class="hero-content">
             <div class="hero-text">
-                <h1 class="hero-text-head">THE BRAND</h1>
-                <h2 class="hero-text-midle">OF LUXERIOUS
-                    <span class="hero-text-red">FASHION</span>
+                <h1 class="hero-text__head">THE BRAND</h1>
+                <h2 class="hero-text__midle">OF LUXERIOUS
+                    <span class="hero-text__red">FASHION</span>
                 </h2>
             </div>
         </div>
