обновление классов по блоку Предложения

--- a/index.html
+++ b/index.html
@@ -63,36 +63,36 @@
     <section class="proposals center">
         <!-- карточка 1 -->
         <div class="proposals-item">
-            <img src="./img/proposal-1.jpg" class="proposals-item-img" alt="предложение">
-            <h4 class="proposal-item-text">
-                30% off <br><span class="proposal-item-red">for women</span>
+            <img src="./img/proposal-1.jpg" class="proposals-item__img" alt="предложение">
+            <h4 class="proposal-item__text">
+                30% off <br><span class="proposal-item__red">for women</span>
             </h4>
         </div>
         <!-- // карточка 1 -->
 
         <!-- карточка 2 -->
         <div class="proposals-item">
-            <img src="./img/proposal-2.jpg" class="proposals-item-img" alt="предложение">
-            <h4 class="proposal-item-text">
-                hot deal <br><span class="proposal-item-red">for men</span>
+            <img src="./img/proposal-2.jpg" class="proposals-item__img" alt="предложение">
+            <h4 class="proposal-item__text">
+                hot deal <br><span class="proposal-item__red">for men</span>
             </h4>
         </div>
         <!-- // карточка 2 -->
 
         <!-- карточка 3 -->
         <div class="proposals-item">
-            <img src="./img/proposal-3.jpg" class="proposals-item-img" alt="предложение">
-            <h4 class="proposal-item-text">
-                new arrivals <br><span class="proposal-item-red">for kids</span>
+            <img src="./img/proposal-3.jpg" class="proposals-item__img" alt="предложение">
+            <h4 class="proposal-item__text">
+                new arrivals <br><span class="proposal-item__red">for kids</span>
             </h4>
         </div>
         <!-- // карточка 3 -->
 
         <!-- карточка 4 -->
-        <div class="proposals-item proposals-item-big">
-            <img src="./img/proposal-4.jpg" class="proposals-item-img" alt="предложение">
-            <h4 class="proposal-item-text">
-                luxirous & trendy <br><span class="proposal-item-red">accesories</span>
+        <div class="proposals-item proposals-item__big">
+            <img src="./img/proposal-4.jpg" class="proposals-item__img" alt="предложение">
+            <h4 class="proposal-item__text">
+                luxirous & trendy <br><span class="proposal-item__red">accesories</span>
             </h4>
         </div>
         <!-- // карточка 4 -->
