--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
     <section class="products center">
         <!-- Заголовок блока продуктов с карточками -->
         <div class="products-title">
-            <h2 class="products-title-head">
+            <h2 class="products-title__head">
                 Fetured Items
             </h2>
-            <p class="products-title-text">
+            <p class="products-title__text">
                 Shop for items based on what we featured in this week
             </p>
         </div>
