--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 
             <!-- Карточка 1 -->
             <div class="products-item">
-                <div class="products-img">
-                    <img src="./img/item1.jpg" class="products-card-img" alt="товары">
-                    <a class="products-card-button" href="#">
+                <div class="products-item__img">
+                    <img src="./img/item1.jpg" class="products-card__img" alt="товары">
+                    <a class="products-card__button" href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" width="27" height="25" viewBox="0 0 27 25" fill="none">
                             <path
                                 d="M21.9521 23.2662H21.8397C21.2306 23.2662 20.7188 22.7666 20.6746 22.1289C20.6302 21.4602 21.1187 20.8781 21.7637 20.8341C21.7891 20.8324 21.8156 20.8315 21.8417 20.8315C22.4587 20.8315 22.9755 21.3214 23.0213 21.9482C23.0331 22.1967 22.9926 22.5509 22.7371 22.8434L22.7312 22.8502L22.7254 22.8571C22.5287 23.0907 22.2619 23.2316 21.9521 23.2662ZM8.22003 23.2599C7.56946 23.2599 7.04022 22.7169 7.04022 22.0496C7.04022 21.3827 7.56946 20.8401 8.22003 20.8401C8.87061 20.8401 9.39984 21.3827 9.39984 22.0496C9.39984 22.7169 8.87061 23.2599 8.22003 23.2599Z"
@@ -134,16 +134,16 @@
                         <span>Add to Card</span>
                     </a>
                 </div>
-                <div class="products-item-block">
-                    <h3 class="products-item-head">
+                <div class="products-item__block">
+                    <h3 class="products-item__head">
                         ELLERY X M'O CAPSULE
                     </h3>
-                    <p class="products-item-paragraf">
+                    <p class="products-item__paragraf">
                         Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym
                         Ellery teams up with Moda
                         Operandi.
                     </p>
-                    <p class="products-item-price">
+                    <p class="products-item__price">
                         $52.00
                     </p>
                 </div>
@@ -152,9 +152,9 @@
 
             <!-- Карточка 2 -->
             <div class="products-item">
-                <div class="products-img">
-                    <img src="./img/item2.jpg" class="products-card-img" alt="товары">
-                    <a class="products-card-button" href="#">
+                <div class="products-item__img">
+                    <img src="./img/item2.jpg" class="products-card__img" alt="товары">
+                    <a class="products-card__button" href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" width="27" height="25" viewBox="0 0 27 25" fill="none">
                             <path
                                 d="M21.9521 23.2662H21.8397C21.2306 23.2662 20.7188 22.7666 20.6746 22.1289C20.6302 21.4602 21.1187 20.8781 21.7637 20.8341C21.7891 20.8324 21.8156 20.8315 21.8417 20.8315C22.4587 20.8315 22.9755 21.3214 23.0213 21.9482C23.0331 22.1967 22.9926 22.5509 22.7371 22.8434L22.7312 22.8502L22.7254 22.8571C22.5287 23.0907 22.2619 23.2316 21.9521 23.2662ZM8.22003 23.2599C7.56946 23.2599 7.04022 22.7169 7.04022 22.0496C7.04022 21.3827 7.56946 20.8401 8.22003 20.8401C8.87061 20.8401 9.39984 21.3827 9.39984 22.0496C9.39984 22.7169 8.87061 23.2599 8.22003 23.2599Z"
@@ -169,17 +169,17 @@
                         <span>Add to Card</span>
                     </a>
                 </div>
-                <div class="products-item-block">
-                    <h3 class="products-item-head">
+                <div class="products-item__block">
+                    <h3 class="products-item__head">
                         ELLERY X M'O CAPSULE
                     </h3>
-                    <p class="products-item-paragraf">
+                    <p class="products-item__paragraf">
                         Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym
                         Ellery teams up with
                         Moda
                         Operandi.
                     </p>
-                    <p class="products-item-price">
+                    <p class="products-item__price">
                         $52.00
                     </p>
                 </div>
@@ -188,9 +188,9 @@
 
             <!-- Карточка 3 -->
             <div class="products-item">
-                <div class="products-img">
-                    <img src="./img/item3.jpg" class="products-card-img" alt="товары">
-                    <a class="products-card-button" href="#">
+                <div class="products-item__img">
+                    <img src="./img/item3.jpg" class="products-card__img" alt="товары">
+                    <a class="products-card__button" href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" width="27" height="25" viewBox="0 0 27 25" fill="none">
                             <path
                                 d="M21.9521 23.2662H21.8397C21.2306 23.2662 20.7188 22.7666 20.6746 22.1289C20.6302 21.4602 21.1187 20.8781 21.7637 20.8341C21.7891 20.8324 21.8156 20.8315 21.8417 20.8315C22.4587 20.8315 22.9755 21.3214 23.0213 21.9482C23.0331 22.1967 22.9926 22.5509 22.7371 22.8434L22.7312 22.8502L22.7254 22.8571C22.5287 23.0907 22.2619 23.2316 21.9521 23.2662ZM8.22003 23.2599C7.56946 23.2599 7.04022 22.7169 7.04022 22.0496C7.04022 21.3827 7.56946 20.8401 8.22003 20.8401C8.87061 20.8401 9.39984 21.3827 9.39984 22.0496C9.39984 22.7169 8.87061 23.2599 8.22003 23.2599Z"
@@ -205,17 +205,17 @@
                         <span>Add to Card</span>
                     </a>
                 </div>
-                <div class="products-item-block">
-                    <h3 class="products-item-head">
+                <div class="products-item__block">
+                    <h3 class="products-item__head">
                         ELLERY X M'O CAPSULE
                     </h3>
-                    <p class="products-item-paragraf">
+                    <p class="products-item__paragraf">
                         Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym
                         Ellery teams up with
                         Moda
                         Operandi.
                     </p>
-                    <p class="products-item-price">
+                    <p class="products-item__price">
                         $52.00
                     </p>
                 </div>
@@ -224,9 +224,9 @@
 
             <!-- Карточка 4 -->
             <div class="products-item">
-                <div class="products-img">
-                    <img src="./img/item4.jpg" class="products-card-img" alt="товары">
-                    <a class="products-card-button" href="#">
+                <div class="products-item__img">
+                    <img src="./img/item4.jpg" class="products-card__img" alt="товары">
+                    <a class="products-card__button" href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" width="27" height="25" viewBox="0 0 27 25" fill="none">
                             <path
                                 d="M21.9521 23.2662H21.8397C21.2306 23.2662 20.7188 22.7666 20.6746 22.1289C20.6302 21.4602 21.1187 20.8781 21.7637 20.8341C21.7891 20.8324 21.8156 20.8315 21.8417 20.8315C22.4587 20.8315 22.9755 21.3214 23.0213 21.9482C23.0331 22.1967 22.9926 22.5509 22.7371 22.8434L22.7312 22.8502L22.7254 22.8571C22.5287 23.0907 22.2619 23.2316 21.9521 23.2662ZM8.22003 23.2599C7.56946 23.2599 7.04022 22.7169 7.04022 22.0496C7.04022 21.3827 7.56946 20.8401 8.22003 20.8401C8.87061 20.8401 9.39984 21.3827 9.39984 22.0496C9.39984 22.7169 8.87061 23.2599 8.22003 23.2599Z"
@@ -241,17 +241,17 @@
                         <span>Add to Card</span>
                     </a>
                 </div>
-                <div class="products-item-block">
-                    <h3 class="products-item-head">
+                <div class="products-item__block">
+                    <h3 class="products-item__head">
                         ELLERY X M'O CAPSULE
                     </h3>
-                    <p class="products-item-paragraf">
+                    <p class="products-item__paragraf">
                         Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym
                         Ellery teams up with
                         Moda
                         Operandi.
                     </p>
-                    <p class="products-item-price">
+                    <p class="products-item__price">
                         $52.00
                     </p>
                 </div>
@@ -260,9 +260,9 @@
 
             <!-- Карточка 5 -->
             <div class="products-item">
-                <div class="products-img">
-                    <img src="./img/item5.jpg" class="products-card-img" alt="товары">
-                    <a class="products-card-button" href="#">
+                <div class="products-item__img">
+                    <img src="./img/item5.jpg" class="products-card__img" alt="товары">
+                    <a class="products-card__button" href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" width="27" height="25" viewBox="0 0 27 25" fill="none">
                             <path
                                 d="M21.9521 23.2662H21.8397C21.2306 23.2662 20.7188 22.7666 20.6746 22.1289C20.6302 21.4602 21.1187 20.8781 21.7637 20.8341C21.7891 20.8324 21.8156 20.8315 21.8417 20.8315C22.4587 20.8315 22.9755 21.3214 23.0213 21.9482C23.0331 22.1967 22.9926 22.5509 22.7371 22.8434L22.7312 22.8502L22.7254 22.8571C22.5287 23.0907 22.2619 23.2316 21.9521 23.2662ZM8.22003 23.2599C7.56946 23.2599 7.04022 22.7169 7.04022 22.0496C7.04022 21.3827 7.56946 20.8401 8.22003 20.8401C8.87061 20.8401 9.39984 21.3827 9.39984 22.0496C9.39984 22.7169 8.87061 23.2599 8.22003 23.2599Z"
@@ -277,17 +277,17 @@
                         <span>Add to Card</span>
                     </a>
                 </div>
-                <div class="products-item-block">
-                    <h3 class="products-item-head">
+                <div class="products-item__block">
+                    <h3 class="products-item__head">
                         ELLERY X M'O CAPSULE
                     </h3>
-                    <p class="products-item-paragraf">
+                    <p class="products-item__paragraf">
                         Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym
                         Ellery teams up with
                         Moda
                         Operandi.
                     </p>
-                    <p class="products-item-price">
+                    <p class="products-item__price">
                         $52.00
                     </p>
                 </div>
@@ -296,9 +296,9 @@
 
             <!-- Карточка 6 -->
             <div class="products-item">
-                <div class="products-img">
-                    <img src="./img/item6.jpg" class="products-card-img" alt="товары">
-                    <a class="products-card-button" href="#">
+                <div class="products-item__img">
+                    <img src="./img/item6.jpg" class="products-card__img" alt="товары">
+                    <a class="products-card__button" href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" width="27" height="25" viewBox="0 0 27 25" fill="none">
                             <path
                                 d="M21.9521 23.2662H21.8397C21.2306 23.2662 20.7188 22.7666 20.6746 22.1289C20.6302 21.4602 21.1187 20.8781 21.7637 20.8341C21.7891 20.8324 21.8156 20.8315 21.8417 20.8315C22.4587 20.8315 22.9755 21.3214 23.0213 21.9482C23.0331 22.1967 22.9926 22.5509 22.7371 22.8434L22.7312 22.8502L22.7254 22.8571C22.5287 23.0907 22.2619 23.2316 21.9521 23.2662ZM8.22003 23.2599C7.56946 23.2599 7.04022 22.7169 7.04022 22.0496C7.04022 21.3827 7.56946 20.8401 8.22003 20.8401C8.87061 20.8401 9.39984 21.3827 9.39984 22.0496C9.39984 22.7169 8.87061 23.2599 8.22003 23.2599Z"
@@ -313,17 +313,17 @@
                         <span>Add to Card</span>
                     </a>
                 </div>
-                <div class="products-item-block">
-                    <h3 class="products-item-head">
+                <div class="products-item__block">
+                    <h3 class="products-item__head">
                         ELLERY X M'O CAPSULE
                     </h3>
-                    <p class="products-item-paragraf">
+                    <p class="products-item__paragraf">
                         Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym
                         Ellery teams up with
                         Moda
                         Operandi.
                     </p>
-                    <p class="products-item-price">
+                    <p class="products-item__price">
                         $52.00
                     </p>
                 </div>
@@ -331,7 +331,7 @@
             <!-- // Карточка 6 -->
         </div>
         <div class="products-button">
-            <button class="products-button-style">
+            <button class="products-button__style">
                 Browse All Product
             </button>
         </div>
