обновление классов по блоку subscribe

--- a/index.html
+++ b/index.html
@@ -387,8 +387,8 @@
     <section class="subscrybe center">
         <div class="subscrybe-comment">
             <img src="./img/Intersect.png" alt="фото">
-            <p class="subscrybe-paragraf">
-                “Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span class="subscrybe-comment-span">a
+            <p class="subscrybe-comment__paragraf">
+                “Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span class="subscrybe-comment__span">a
                     pulvinar
                     purus condimentum“</span>
             </p>
