обновление классов выполнено

--- a/index.html
+++ b/index.html
@@ -395,9 +395,9 @@
         </div>
 
         <div class="subscrybe-form">
-            <h3 class="subscrybe-form-text">
+            <h3 class="subscrybe-form__text">
                 SUBSCRIBE <br>
-                <span class="subscrybe-form-paragraf">
+                <span class="subscrybe-form__paragraf">
                     FOR OUR NEWLETTER AND PROMOTION
                 </span>
             </h3>
