--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- // блок Банер -->
 
     <!-- блок Предложения -->
-    <section class="proposals center">
+    <section class="proposals center none">
         <!-- карточка 1 -->
         <div class="proposals-item">
             <img src="./img/proposal-1.jpg" class="proposals-item__img" alt="предложение">
@@ -100,7 +100,7 @@
     <!-- // блок Предложения -->
 
     <!-- блок Продукты -->
-    <section class="products center">
+    <section class="products center none">
         <!-- Заголовок блока продуктов с карточками -->
         <div class="products-title">
             <h2 class="products-title__head">
@@ -337,7 +337,7 @@
         </div>
     </section>
 
-    <section class="options center">
+    <section class="options center none">
         <!-- block 1-->
         <div class="option-item">
             <svg xmlns="http://www.w3.org/2000/svg" width="46" height="32" viewBox="0 0 46 32" fill="none">
@@ -384,7 +384,7 @@
         <!-- // block 3-->
     </section>
 
-    <section class="subscrybe center">
+    <section class="subscrybe center none">
         <div class="subscrybe-comment">
             <img src="./img/Intersect.png" alt="фото">
             <p class="subscrybe-comment__paragraf">
@@ -408,7 +408,7 @@
         </div>
     </section>
 
-    <footer class="footer center">
+    <footer class="footer center none">
         <div class="copy">
             <p class="footer-copy">
                 © 2022 Brand All Rights Reserved.
