работа над блоком hero начало

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         <!-- // Главное Меню -->
 
         <!-- блок Банер -->
-        <section class="hero none">
-            <img class="hero-img mobile-none" src="./img/main-photo.png" alt="Главное фото">
-            <div class="hero-content">
-                <div class="hero-text">
-                    <h1 class="hero-text__head">THE BRAND</h1>
+        <section class="hero">
+            <div class="hero__content">
+                <img class="hero__img" src="./img/main-photo.png" alt="Главное фото">
+                <div class="hero__text center">
+                    <h1 class="hero-text__head"><span class="hero-text__span"></span>THE BRAND</h1>
                     <h2 class="hero-text__midle">OF LUXERIOUS
                         <span class="hero-text__red">FASHION</span>
                     </h2>
