работа над блоком hero

--- a/index.html
+++ b/index.html
@@ -62,16 +62,13 @@
         <!-- // Главное Меню -->
 
         <!-- блок Банер -->
-        <section class="hero">
-            <div class="hero__content">
-                <img class="hero__img" src="./img/main-photo.png" alt="Главное фото">
-                <div class="hero__text center">
+        <section class="hero center">
+                <div class="hero__text ">
                     <h1 class="hero-text__head"><span class="hero-text__span"></span>THE BRAND</h1>
                     <h2 class="hero-text__midle">OF LUXERIOUS
                         <span class="hero-text__red">FASHION</span>
                     </h2>
                 </div>
-            </div>
         </section>
         <!-- // блок Банер -->
 
