продоление работы над блоком

--- a/index.html
+++ b/index.html
@@ -63,12 +63,14 @@
 
         <!-- блок Банер -->
         <section class="hero center">
-                <div class="hero__text ">
+            <div class="hero__content ">
+                <div class="hero__text">
                     <h1 class="hero-text__head"><span class="hero-text__span"></span>THE BRAND</h1>
                     <h2 class="hero-text__midle">OF LUXERIOUS
                         <span class="hero-text__red">FASHION</span>
                     </h2>
                 </div>
+            </div>
         </section>
         <!-- // блок Банер -->
 
