работа над полем предложения, завершил стилизацию карточек, текста, сделал белый фон и падинги

--- a/index.html
+++ b/index.html
@@ -74,40 +74,29 @@
         <!-- card 1 -->
         <div class="offers__item">
             <img src="./img/offers/proposal1.png" alt="Предложения для мужчин">
-            <div class="offers__text">
-                <h2 class="offers__heading">HOT DEAL</h3>
-                    <h3 class="offers__title">FOR MEN</h3>
-            </div>
+            <h2 class="offers__text">HOT DEAL <br><span class="offers__title">FOR MEN</span></h2>
         </div>
         <!-- // card 1 -->
 
         <!-- card 2 -->
         <div class="offers__item">
             <img src="./img/offers/proposal2.png" alt="Предложения для мужчин">
-            <div class="offers__text">
-                <h2 class="offers__heading">HOT DEAL</h3>
-                    <h3 class="offers__title">FOR WOMEN</h3>
-            </div>
+            <h2 class="offers__text">HOT DEAL <br><span class="offers__title">FOR WOMEN</span></h2>
         </div>
         <!-- // card 2
          -->
         <!-- card 3 -->
         <div class="offers__item">
             <img src="./img/offers/proposal3.png" alt="Предложения для мужчин">
-            <div class="offers__text">
-                <h2 class="offers__heading">LUXIROUS & TRENDY </h3>
-                    <h3 class="offers__title">ACCESORIES</h3>
-            </div>
+            <h2 class="offers__text">LUXIROUS & TRENDY <br><span class="offers__title">ACCESORIES</span></h2>
+
         </div>
         <!-- // card 3 -->
 
         <!-- card 4 -->
         <div class="offers__item">
             <img src="./img/offers/proposal4.png" alt="Предложения для мужчин">
-            <div class="offers__text">
-                <h2 class="offers__heading">NEW ARRIVALS</h3>
-                    <h3 class="offers__title">FOR KIDS</h3>
-            </div>
+            <h2 class="offers__text">NEW ARRIVALS <br><span class="offers__title">FOR KIDS</span></h2>
         </div>
         <!-- // card 4 -->
 
