обновил настройки главного фото, блок завершен фото готово

--- a/index.html
+++ b/index.html
@@ -77,21 +77,21 @@
             <!-- card 1 -->
             <div class="offers__item">
                 <img src="./img/offers/proposal1.png" alt="Предложения для мужчин">
-                <h2 class="offers__text">HOT DEAL <br><span class="offers__title">FOR MEN</span></h2>
+                <h2 class="offers__text">HOT DEAL <br><span class="offers__text_title">FOR MEN</span></h2>
             </div>
             <!-- // card 1 -->
 
             <!-- card 2 -->
             <div class="offers__item">
                 <img src="./img/offers/proposal2.png" alt="Предложения для мужчин">
-                <h2 class="offers__text">HOT DEAL <br><span class="offers__title">FOR WOMEN</span></h2>
+                <h2 class="offers__text">HOT DEAL <br><span class="offers__text_title">FOR WOMEN</span></h2>
             </div>
             <!-- // card 2
          -->
             <!-- card 3 -->
             <div class="offers__item">
                 <img src="./img/offers/proposal3.png" alt="Предложения для мужчин">
-                <h2 class="offers__text">LUXIROUS & TRENDY <br><span class="offers__title">ACCESORIES</span></h2>
+                <h2 class="offers__text">LUXIROUS & TRENDY <br><span class="offers__text_title">ACCESORIES</span></h2>
 
             </div>
             <!-- // card 3 -->
@@ -99,7 +99,7 @@
             <!-- card 4 -->
             <div class="offers__item">
                 <img src="./img/offers/proposal4.png" alt="Предложения для мужчин">
-                <h2 class="offers__text">NEW ARRIVALS <br><span class="offers__title">FOR KIDS</span></h2>
+                <h2 class="offers__text">NEW ARRIVALS <br><span class="offers__text_title">FOR KIDS</span></h2>
             </div>
             <!-- // card 4 -->
         </section>
