начала работы с блоком продукты, сделал заголовок

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <!-- // блок Предложения -->
         
         <!-- блок Продукты -->
-        <section class="products center none">
+        <section class="products center">
             <!-- Заголовок блока продуктов с карточками -->
             <div class="products-title">
                 <h2 class="products-title__head">
