--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <!-- card 2 -->
             <div class="offers__item">
                 <img src="./img/offers/proposal2.png" alt="Предложения для мужчин">
-                <h2 class="offers__text">HOT DEAL <br><span class="offers__text_title">FOR WOMEN</span></h2>
+                <h2 class="offers__text">30% OFFER <br><span class="offers__text_title">WOMEN</span></h2>
             </div>
             <!-- // card 2
          -->
@@ -106,7 +106,7 @@
         <!-- // блок Предложения -->
         
         <!-- блок Продукты -->
-        <section class="products center">
+        <section class="products center none">
             <!-- Заголовок блока продуктов с карточками -->
             <div class="products-title">
                 <h2 class="products-title__head">
@@ -348,7 +348,7 @@
                 </button>
             </div>
         </section>
-
+        
         <section class="options center none">
             <!-- block 1-->
             <div class="option-item">
