заголовок блока продукты готов

--- a/index.html
+++ b/index.html
@@ -104,8 +104,20 @@
             <!-- // card 4 -->
         </section>
         <!-- // блок Предложения -->
-        
+        <section class="products center">
+            <!-- Заголовок блока продуктов с карточками -->
+            <div class="products-title">
+                <h2 class="products-title__head">Fetured Items</h2>
+                <p class="products-title__text">Shop for items based on what we featured in this week</p>
+            </div>
+            <!-- // Заголовок блока продуктов с карточками -->
+        </section>
         <!-- блок Продукты -->
+
+
+
+
+        <!-- старый код -->
         <section class="products center none">
             <!-- Заголовок блока продуктов с карточками -->
             <div class="products-title">
@@ -348,7 +360,7 @@
                 </button>
             </div>
         </section>
-        
+
         <section class="options center none">
             <!-- block 1-->
             <div class="option-item">
