подготовлено грид карточке, добавлено 4 карточки

--- a/index.html
+++ b/index.html
@@ -111,6 +111,57 @@
                 <p class="products-title__text">Shop for items based on what we featured in this week</p>
             </div>
             <!-- // Заголовок блока продуктов с карточками -->
+            <!-- карточки -->
+            <div class="products-items">
+                <!-- card1 -->
+                <div class="products-item">
+                    <div class="products-item__img">
+                        <img class="products-item__img-card" width="261" src="./img/products/catalog.png"
+                            alt="фото товара">
+                    </div>
+                    <div class="products-item__text">
+                        <h3 class="products-item__head">Mango People T-shirt</h3>
+                        <p class="products-item__price">$52.00</p>
+                    </div>
+                </div>
+                <!-- // card1 -->
+                <!-- card2 -->
+                <div class="products-item">
+                    <div class="products-item__img">
+                        <img class="products-item__img-card" width="261" src="./img/products/catalog1.png"
+                            alt="фото товара">
+                    </div>
+                    <div class="products-item__text">
+                        <h3 class="products-item__head">Mango People T-shirt</h3>
+                        <p class="products-item__price">$52.00</p>
+                    </div>
+                </div>
+                <!-- // card2 -->
+                <!-- card3 -->
+                <div class="products-item">
+                    <div class="products-item__img">
+                        <img class="products-item__img-card" width="261" src="./img/products/catalog2.png"
+                            alt="фото товара">
+                    </div>
+                    <div class="products-item__text">
+                        <h3 class="products-item__head">Mango People T-shirt</h3>
+                        <p class="products-item__price">$52.00</p>
+                    </div>
+                </div>
+                <!-- // card3 -->
+                <!-- card4 -->
+                <div class="products-item">
+                    <div class="products-item__img">
+                        <img class="products-item__img-card" width="261" src="./img/products/catalog3.png"
+                            alt="фото товара">
+                    </div>
+                    <div class="products-item__text">
+                        <h3 class="products-item__head">Mango People T-shirt</h3>
+                        <p class="products-item__price">$52.00</p>
+                    </div>
+                </div>
+                <!-- // card4 -->
+            </div>
         </section>
         <!-- блок Продукты -->
 
