добавлены все карточки, работаю с кнопкой

--- a/index.html
+++ b/index.html
@@ -161,6 +161,58 @@
                     </div>
                 </div>
                 <!-- // card4 -->
+                <!-- card5 -->
+                <div class="products-item">
+                    <div class="products-item__img">
+                        <img class="products-item__img-card" width="261" src="./img/products/catalog4.png"
+                            alt="фото товара">
+                    </div>
+                    <div class="products-item__text">
+                        <h3 class="products-item__head">Mango People T-shirt</h3>
+                        <p class="products-item__price">$52.00</p>
+                    </div>
+                </div>
+                <!-- // card5 -->
+                <!-- card6 -->
+                <div class="products-item">
+                    <div class="products-item__img">
+                        <img class="products-item__img-card" width="261" src="./img/products/catalog5.png"
+                            alt="фото товара">
+                    </div>
+                    <div class="products-item__text">
+                        <h3 class="products-item__head">Mango People T-shirt</h3>
+                        <p class="products-item__price">$52.00</p>
+                    </div>
+                </div>
+                <!-- // card6 -->
+                <!-- card7 -->
+                <div class="products-item">
+                    <div class="products-item__img">
+                        <img class="products-item__img-card" width="261" src="./img/products/catalog6.png"
+                            alt="фото товара">
+                    </div>
+                    <div class="products-item__text">
+                        <h3 class="products-item__head">Mango People T-shirt</h3>
+                        <p class="products-item__price">$52.00</p>
+                    </div>
+                </div>
+                <!-- // card7 -->
+                <!-- card8 -->
+                <div class="products-item">
+                    <div class="products-item__img">
+                        <img class="products-item__img-card" width="261" src="./img/products/catalog7.png"
+                            alt="фото товара">
+                    </div>
+                    <div class="products-item__text">
+                        <h3 class="products-item__head">Mango People T-shirt</h3>
+                        <p class="products-item__price">$52.00</p>
+                    </div>
+                </div>
+                <!-- // card8 -->
+            </div>
+            <!-- // карточки -->
+            <div class="products-button">
+                <button class="products-button__all">Browse All Product<i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
             </div>
         </section>
         <!-- блок Продукты -->
