--- a/index.html
+++ b/index.html
@@ -225,7 +225,11 @@
             <div class="options__conteiner">
                 <div class="option-img">
                     <img src="./img/option.png" alt="Горячее предложение">
-                    <!-- <h2 class="offers__text">HOT DEAL <br><span class="offers__text_title">FOR MEN</span></h2> -->
+                    <div class="option-text">
+                        <h2 class="option-img__text">30% <span class="option-img_pink">OFFER</span></h2>
+                        <h3 class="option-img__text option-img_small">FOR WOMEN</h3>
+                    </div>
+
                 </div>
                 <div class="option">
                     <!-- block 1-->
@@ -278,7 +282,7 @@
                             </svg>
                         </div>
                         <div class="option__header">
-                            <h3 class="option-item__head">Free Delivery</h3>
+                            <h3 class="option-item__head">Sales & discounts</h3>
                             <p class="option-item__title">
                                 Worldwide delivery on&nbsp;all. Authorit tively morph next-generation innov tion with
                                 extensive
@@ -298,7 +302,7 @@
                             </svg>
                         </div>
                         <div class="option__header">
-                            <h3 class="option-item__head">Free Delivery</h3>
+                            <h3 class="option-item__head">Quality assurance</h3>
                             <p class="option-item__title">
                                 Worldwide delivery on&nbsp;all. Authorit tively morph next-generation innov tion with
                                 extensive
