--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@
         <div class="subscrybe-comment">
             <img src="./img/Intersect.png" alt="фото">
             <p class="subscrybe-comment__paragraf">
-                “Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span class="subscrybe-comment__span">a
-                    pulvinar purus condimentum“</span>
+                “Vestibulum quis porttitor dui! Quisque viverra nunc mi,
+                a pulvinar purus condimentum a. Aliquam condimentum mattis neque sed pretium”
             </p>
         </div>
 
